# inertial-navigation

./: CMakeLists.txt  README.md
config/fsnav_ins/: fsnav_ins.cfg
data_testing/: data_cfg.m  data_testing.m  load_data.m  save_data.m
docs/: fsnav_core_tutorial.html
libs/: fsnav.c  fsnav.h
libs/ins/: fsnav_ins_alignment.c  fsnav_ins_alignment.h  fsnav_ins_attitude.c  fsnav_ins_attitude.h  fsnav_ins_gravity.c  fsnav_ins_gravity.h  fsnav_ins_motion.c  fsnav_ins_motion.h
scripts/calibration/: accs_calibr.m  accs_chunks.m  gyros_calibr.m  gyros_chunks.m
scripts/data_testing/: Allan_variance.m  data_cfg.m  data_testing.m  load_sensors_data.m  process_noise.m  save_sensors_data.m  smooth_psd.m
source/fsnav_ins/: fsnav_ins.c
